@@ -1,3 +1,10 @@
+Mon Feb  3 09:50:26 CET 2003 Daniel Veillard <daniel@veillard.com>
+
+	* python/libxml.c: removed an unprotedted debug message Aleksi Suhonen
+	* parser.c: put a guard against infinite document depth, basically
+	  trying to avoid another kind of DoS attack.
+	* relaxng.c: some code w.r.t. nameClasses
+
 Sun Feb  2 17:01:43 CET 2003 Daniel Veillard <daniel@veillard.com>
 
 	* test/relaxng/* result/relaxng/*: check all the namespace support
